--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8" />
   <title>Box App</title>
   <style>
-    body { margin: 0; overflow: hidden; }
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
+    #toolbar {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 10px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      font-family: "Segoe UI", sans-serif;
+    }
+
+    #toolbar button {
+      margin: 4px;
+      padding: 8px 16px;
+      font-size: 14px;
+      border: none;
+      border-radius: 6px;
+      background-color: #f0f0f0;
+      color: #333;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    #toolbar button:hover {
+      background-color: #e0e0e0;
+    }
+
+    #toolbar button.selected {
+      background-color: #007acc;
+      color: white;
+      font-weight: bold;
+      box-shadow: 0 0 4px rgba(0, 122, 204, 0.4);
+    }
   </style>
 </head>
+
 <body>
+  <div id="toolbar">
+    <div id="selected-label">選択中: 2×4</div>
+    <button id="btn-2x4">2×4</button>
+    <button id="btn-1x6">1×6</button>
+  </div>
   <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
