Box をクリックするとその Box が選択状態になる。

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
       font-weight: bold;
       box-shadow: 0 0 4px rgba(0, 122, 204, 0.4);
     }
+
+    #info {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 8px 12px;
+      font-size: 14px;
+      border-radius: 8px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+      font-family: sans-serif;
+    }
   </style>
 </head>
 
@@ -53,6 +65,7 @@
     <button id="btn-2x4">2×4</button>
     <button id="btn-1x6">1×6</button>
   </div>
+  <div id="info">幅: -　高さ: -　奥行: -</div>
   <script type="module" src="./js/main.js"></script>
 </body>
 
