--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
       box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
       font-family: sans-serif;
     }
+
+    #context-menu {
+      position: absolute;
+      background-color: white;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      padding: 4px 0;
+      z-index: 100;
+      font-family: sans-serif;
+    }
+
+    #context-menu ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    #context-menu li {
+      padding: 8px 16px;
+      cursor: pointer;
+    }
+
+    #context-menu li:hover {
+      background-color: #eee;
+    }
   </style>
 </head>
 
@@ -66,6 +92,12 @@
     <button id="btn-1x6">1×6</button>
   </div>
   <div id="info">幅: -　高さ: -　奥行: -</div>
+  <div id="context-menu" style="display: none;">
+    <ul>
+      <li id="menu-delete">🗑️ 削除</li>
+      <li id="menu-duplicate">📦 複製</li>
+    </ul>
+  </div>
   <script type="module" src="./js/main.js"></script>
 </body>
 
