シフト押しながらBox選択で整列

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
       <li id="rotate-y">Y軸で回転</li>
     </ul>
   </div>
+  <div id="align-toolbar" style="display:none; position:absolute; top:80px; left:80%; transform:translateX(-50%);">
+    <button id="align-h">横揃え</button>
+    <button id="align-v">縦揃え</button>
+  </div>
   <script type="module" src="./js/main.js"></script>
 </body>
 
