衝突を回避するようになった

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
       border-radius: 6px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
       padding: 4px 0;
-      z-index: 100;
+      z-index: 1000;
       font-family: sans-serif;
+      pointer-events: auto;
     }
 
     #context-menu ul {
