--- a/index.html
+++ b/index.html
@@ -44,7 +44,35 @@
       font-weight: bold;
       box-shadow: 0 0 4px rgba(0, 122, 204, 0.4);
     }
+    #align-bar
+    {
+      position: absolute;
+      top: 100px;
+      left: 10px;
+      z-index: 10;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 10px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      font-family: "Segoe UI", sans-serif;
+    }
+    #align-bar button {
+      margin: 4px;
+      padding: 8px 16px;
+      font-size: 14px;
+      border: none;
+      border-radius: 6px;
+      background-color: #f0f0f0;
+      color: #333;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
 
+    #align-bar button:hover {
+      background-color: #e0e0e0;
+    }
+
+    
     #info {
       position: absolute;
       top: 10px;
@@ -117,6 +145,12 @@
     <div id="selected-label">選択中: 2×4</div>
     <button id="btn-2x4">2×4</button>
     <button id="btn-1x6">1×6</button>
+  </div>
+    <div id="align-bar">
+    <button id="align-left">左端揃え</button>
+    <button id="align-top">上端揃え</button>
+    <button id="align-bottom">下端揃え</button>
+    <button id="align-right">右端揃え</button>
   </div>
   <div id="info">幅: -　高さ: -　奥行: -</div>
   <div id="context-menu" style="display: none;">
