手前揃えと奥揃えも追加。整列ツールバー表示はなくした。

--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
     <button id="align-top">上端揃え</button>
     <button id="align-bottom">下端揃え</button>
     <button id="align-right">右端揃え</button>
+    <button id="align-front">手前揃え</button>
+    <button id="align-behind">奥揃え</button>
   </div>
   <div id="info">幅: -　高さ: -　奥行: -</div>
   <div id="context-menu" style="display: none;">
@@ -165,10 +167,6 @@
       <li id="rotate-x">X軸で回転</li>
       <li id="rotate-y">Y軸で回転</li>
     </ul>
-  </div>
-  <div id="align-toolbar" style="display:none; position:absolute; top:80px; left:80%; transform:translateX(-50%);">
-    <button id="align-h">横揃え</button>
-    <button id="align-v">縦揃え</button>
   </div>
   <script type="module" src="./js/main.js"></script>
 </body>
